Fixed the RWD font problem, Closes #1

--- a/Labs/Lab_2/Zad_9_2pkt_Card_Y_Rotation/index.html
+++ b/Labs/Lab_2/Zad_9_2pkt_Card_Y_Rotation/index.html
@@ -16,7 +16,7 @@
             <div class="card_front">
                 <div class="img_with_cityname">
                     <img src="src/Grodno.jpg" alt="">
-                    <p class="cityname">Mińsk</p>
+                    <p class="cityname">Grodno</p>
                 </div>
                 <div class="main">
 
@@ -29,8 +29,8 @@
             <div class="card_back">
                 <div class="container_back">
                     <p class="first">TYLKO</p>
-                    <p class="price"> 15 ZŁ</p>
-                    <a href="/" class="reserve">Zarezerwuj</a>
+                    <p class="price"> 150 ZŁ</p>
+                    <a href="#" class="reserve">Zarezerwuj</a>
                 </div>
             </div>
         </div>
@@ -41,7 +41,7 @@
             <div class="card_front">
                 <div class="img_with_cityname">
                     <img src="src/Grodno.jpg" alt="">
-                    <p class="cityname">Mińsk</p>
+                    <p class="cityname">Grodno</p>
                 </div>
                 <div class="main">
 
@@ -54,12 +54,13 @@
             <div class="card_back">
                 <div class="container_back">
                     <p class="first">TYLKO</p>
-                    <p class="price"> 15 ZŁ</p>
-                    <a href="/" class="reserve">Zarezerwuj</a>
+                    <p class="price"> 150 ZŁ</p>
+                    <a href="#" class="reserve">Zarezerwuj</a>
                 </div>
             </div>
         </div>
     </div>
+    
 </body>
 
 </html>
