Added Lab_2 All

--- a/Labs/Lab_2/Zad_10_1pkt_Header_and_form/index.html
+++ b/Labs/Lab_2/Zad_10_1pkt_Header_and_form/index.html
@@ -12,8 +12,8 @@
     <div class="back">
         <div class="left">
             <h1>Nagłowek testowy</h1>
-            <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...""Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...""Neque porro quisquam est qui dolorem ipsum quia
-                dolor sit amet, consectetur, adipisci velit..."</p>
+            <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...""Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...""Neque porro quisquam est qui dolorem ipsum quiadolor
+                sit amet, consectetur, adipisci velit..."</p>
             <button>Wiecej info</button>
         </div>
     </div>
