--- a/Labs/Lab_2/Zad_7_2pkt_Responsive_Navbar/index.html
+++ b/Labs/Lab_2/Zad_7_2pkt_Responsive_Navbar/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <nav class="nav">
         <a href="#" class="logo">LOGO</a>
         <!-- Checkbox to show on click -->
         <input class="menu-btn" type="checkbox" id="menu-btn" />
@@ -24,7 +24,7 @@
             <li><a href="#">KONTAKT</a></li>
             <li><a href="#">HOBBY</a></li>
         </ul>
-    </header>
+    </nav>
 </body>
 
 </html>
