--- a/Labs/Lab_2/Zad_9_2pkt_Card_Y_Rotation/index.html
+++ b/Labs/Lab_2/Zad_9_2pkt_Card_Y_Rotation/index.html
@@ -19,22 +19,26 @@
                     <p class="cityname">Grodno</p>
                 </div>
                 <div class="main">
-
-                    <p>5 dniowa wycieczka</p>
-                    <p>max 10 osób</p>
-                    <p>Hotel 5*
-                        <p>
+                    <p>5 days trip</p>
+                    <p>max 10 persons</p>
+                    <p>Hotel 5*</p>
+                    <p>Breathtaking views</p>
+                    <p>Dificulty of the trip: easy</p>
                 </div>
             </div>
             <div class="card_back">
                 <div class="container_back">
                     <p class="first">TYLKO</p>
-                    <p class="price"> 150 ZŁ</p>
-                    <a href="#" class="reserve">Zarezerwuj</a>
+                    <p class="price"> 150$</p>
+                    <div class="button">
+                        <a href="#" class="reserve">Zarezerwuj</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+
     <div class="card">
         <div class="card_inner">
 
@@ -44,23 +48,25 @@
                     <p class="cityname">Grodno</p>
                 </div>
                 <div class="main">
-
-                    <p>5 dniowa wycieczka</p>
-                    <p>max 10 osób</p>
-                    <p>Hotel 5*
-                        <p>
+                    <p>5 days trip</p>
+                    <p>max 10 persons</p>
+                    <p>Hotel 5*</p>
+                    <p>Breathtaking views</p>
+                    <p>Dificulty of the trip: easy</p>
                 </div>
             </div>
             <div class="card_back">
                 <div class="container_back">
                     <p class="first">TYLKO</p>
-                    <p class="price"> 150 ZŁ</p>
-                    <a href="#" class="reserve">Zarezerwuj</a>
+                    <p class="price"> 150$</p>
+                    <div class="button">
+                        <a href="#" class="reserve">Zarezerwuj</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    
+
 </body>
 
 </html>
