--- a/Labs/Lab_3/Zad_5_2pkt/index.html
+++ b/Labs/Lab_3/Zad_5_2pkt/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,31 +8,32 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
+
 <body>
-    <p id="text">
-        <div id="bigger">
-
-            <div id="medium">
-
-                <div id="small">
-
-                </div>
-
+    <div id="bigger">
+        <p>+1 pkt</p>
+        <div id="medium">
+            <p>+2 pkt</p>
+            <div id="small">
+                <p>+5 pkt</p>
             </div>
 
         </div>
-        <p>Total Counts: </p>
-        <h1 id="totalCounts">0</h1>
-    </p>
-        <div 
-        style="margin-top: 2%;">
-        Do you want to start Propagation?
-        <input type="checkbox" name="Propagation" id="stopStartPropagation">
+
     </div>
-    <button
-    style="margin-top: 2%;"
-    onclick="reset()"
-    >RESET</button>
-    
+    <h1>Total Counts: </h1>
+    <h1 id="totalCounts">0</h1>
+    <div>
+        Do you want to start Propagation?
+        <input type="checkbox" name="Propagation" id="stopStartPropagation" class="commenttext">
+    </div>
+    <div>
+        Do you want to get Alerts?
+        <input type="checkbox" name="Alerts" id="getAlerts" class="commenttext">
+
+    </div>
+    <button class="commenttext" id="resetButton">RESET</button>
+
 </body>
+
 </html>
