Added Forms to Zad_7 Need Layout and Styling

--- a/Labs/Lab_3/Zad_7/index.html
+++ b/Labs/Lab_3/Zad_7/index.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <p id="text">
-        Hello World
-        
-    </p>
+    <div class="form">
+        <div class="field">
+            <p>name</p>
+            <input type="text" id="name" placeholder="name">
+        </div>
+        <div class="field">
+            <p>Surname</p>
+            <input type="text" id="surname" placeholder="surname">
+        </div>
+        <div class="field">
+            <p>phone</p>
+            <input type="text" id="phone" placeholder="text">
+        </div>
+        <div class="field">
+            <p>gender</p>
+            <input type="text" id="gender" placeholder="gender">
+        </div>
+        <div class="field">
+            <p>datetime</p>
+            <input type="datetime" id="date" placeholder="date">
+        </div>
+        <div class="field">
+            <p>rok_emerytura</p>
+            <input type="text" id="rok_emerytura" placeholder="rok_emerytura">
+        </div>
+    </div>
 </body>
+
 </html>
