Fixed Layer Issue, Closes #2

--- a/Labs/Lab_3/Zad_7_1pkt_Forms/index.html
+++ b/Labs/Lab_3/Zad_7_1pkt_Forms/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="field">
             <h3>Planowana Emerytura:</h3>
-            <input type="year" id="rok_emerytura" placeholder="Rok pójścia na emeryturę" required="required">
+            <input type="number" id="rok_emerytura" placeholder="Rok pójścia na emeryturę" required="required">
             <p id="mistake-rok_emerytura">Mistake text</p>
         </div>
         <input type="button" value="Subbmit" id="submit_button">
