--- a/Labs/Lab_3/Zad_10_5pkt/index.html
+++ b/Labs/Lab_3/Zad_10_5pkt/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js" defer></script>
 </head>
-
 <body>
-    <p id="show"></p>
+    <p id="text">
+        Solution is in the console
+    </p>
 </body>
-
 </html>
